--- a/Week 1/index.html
+++ b/Week 1/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>hello</title>
-</head>
-<body>
-        
-</body>
+    <head>
+        <title>Hello world!</title>
+        <meta charset="UTF-8">
+    </head>
+
+    <body>
+        Hello world!
+    </body>
 </html>
