--- a/Week 1/index.html
+++ b/Week 1/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hello world!</title>
+        <title>Hello world</title>
         <meta charset="UTF-8">
     </head>
 
     <body>
-        Hello world!
+       <p title="This is some website content" style="color: red;">Hello world!</p> 
     </body>
 </html>
