--- a/Week 1/index.html
+++ b/Week 1/index.html
@@ -6,6 +6,20 @@
     </head>
 
     <body>
-       <p title="This is some website content" style="color: red;">Hello world!</p> 
+        <section>
+            <h2>Latest post</h2>
+            <h3>Here you can see all the latest posts</h3>
+            <article>
+                <h4>This is the post title</h4>
+                <p>This is some content <br>inside this post.</p>
+                <h5>Author: Daniel</h5>
+            </article>
+        </section>
+
+
+        <h1>This website is about stuff!</h1>
+        <h2>Latest articles</h2>
+        <h2>Gallery</h2>
+       <p>Hello world!</p> 
     </body>
 </html>
